tests/snapshots/snapshot_tests__snap_check_simple_function.snap
---
source: tests/snapshot_tests.rs
expression: check_snap(src)
---
{
  "items": [
    {
      "kind": {
        "Function": {
          "name": "add",
          "params": [
            {
              "name": "a",
              "ty": 5,
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 8
                },
                "end": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 17
                }
              }
            },
            {
              "name": "b",
              "ty": 5,
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 18
                },
                "end": {
                  "file": "test.axon",
                  "line": 2,
                  "column": 27
                }
              }
            }
          ],
          "return_type": 5,
          "body": {
            "stmts": [
              {
                "kind": {
                  "Return": {
                    "kind": {
                      "BinaryOp": {
                        "left": {
                          "kind": {
                            "Identifier": "a"
                          },
                          "ty": 5,
                          "span": {
                            "start": {
                              "file": "test.axon",
                              "line": 3,
                              "column": 5
                            },
                            "end": {
                              "file": "test.axon",
                              "line": 3,
                              "column": 8
                            }
                          }
                        },
                        "op": "Add",
                        "right": {
                          "kind": {
                            "Identifier": "b"
                          },
                          "ty": 5,
                          "span": {
                            "start": {
                              "file": "test.axon",
                              "line": 3,
                              "column": 9
                            },
                            "end": {
                              "file": "test.axon",
                              "line": 4,
                              "column": 2
                            }
                          }
                        }
                      }
                    },
                    "ty": 5,
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 3,
                        "column": 5
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 4,
                        "column": 2
                      }
                    }
                  }
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 3,
                    "column": 5
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 4,
                    "column": 2
                  }
                }
              }
            ],
            "tail_expr": null,
            "ty": 5,
            "span": {
              "start": {
                "file": "test.axon",
                "line": 2,
                "column": 35
              },
              "end": {
                "file": "test.axon",
                "line": 5,
                "column": 1
              }
            }
          },
          "span": {
            "start": {
              "file": "test.axon",
              "line": 2,
              "column": 1
            },
            "end": {
              "file": "test.axon",
              "line": 5,
              "column": 1
            }
          }
        }
      },
      "span": {
        "start": {
          "file": "test.axon",
          "line": 2,
          "column": 1
        },
        "end": {
          "file": "test.axon",
          "line": 5,
          "column": 1
        }
      },
      "visibility": "Private",
      "attributes": []
    }
  ],
  "span": {
    "start": {
      "file": "test.axon",
      "line": 2,
      "column": 1
    },
    "end": {
      "file": "test.axon",
      "line": 5,
      "column": 1
    }
  }
}
