tests/snapshots/snapshot_tests__snap_error_duplicate_definition.snap
---
source: tests/snapshot_tests.rs
expression: error_snap(src)
---
[E1002] duplicate definition of `foo` in the same scope
