tests/snapshots/snapshot_tests__snap_error_missing_return_type.snap
---
source: tests/snapshot_tests.rs
expression: error_snap(src)
---
[E2001] expected `i64`, found `()`
