tests/snapshots/snapshot_tests__snap_error_parse_unexpected_token.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
[E0103] expected expression, found ';'
