tests/snapshots/snapshot_tests__snap_error_type_mismatch.snap
---
source: tests/snapshot_tests.rs
expression: error_snap(src)
---
[E2001] expected `i64`, found `string`
