tests/snapshots/snapshot_tests__snap_error_undefined_type.snap
---
source: tests/snapshot_tests.rs
expression: error_snap(src)
---
[E1001] undefined name `FooBar`
