tests/snapshots/snapshot_tests__snap_error_wrong_arg_count.snap
---
source: tests/snapshot_tests.rs
expression: error_snap(src)
---
[E2003] expected 2 arguments, found 1
