tests/snapshots/snapshot_tests__snap_fmt_model.snap
---
source: tests/snapshot_tests.rs
expression: fmt_snap(src)
---
model Point {
    x: Float64,
    y: Float64,
}
